Fixed background image issues on iPhone 8 Plus Safari in both portrait and landscape

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,21 +79,30 @@ table {
  
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 //My Global Helpers----------------------------------------------------------------------
+
+
+
 body {
   margin: $noMargin;
   padding: $noPadding;
   font-family: "Lato", sans-serif;
+  position: relative;
 
 }
 
-@media(max-width:568px){
-  .img1, .img2, .img3, .img4, .img5 {
-    background-attachment: scroll;
-    background-size: contain;
-  }
-
-}
 
 .barrier {
   margin: 5vh 0 5vh 0;
@@ -305,6 +314,16 @@ body {
 
 
 // Page-Specific SCSS =============================================================
+// #page {
+//   position: absolute;
+//   top: 0%;
+//   left: 0%;
+// }
+
+// body, .landingPage, .home, .container, #page {
+//   max-height: 100vh;
+//   max-width: 100vw;
+// }
 
 
 
@@ -453,6 +472,9 @@ body {
 
 .home {
 
+  height: 100vh;
+  width: 100vw;
+
   a {
     color: white;
     font-size: calc($homefont+5);
@@ -463,44 +485,128 @@ body {
   line-height:1.8em;
   color: #666;
 
+  @media (max-width:568px) and (orientation:portrait){
+    .img1, .img2, .img3, .img4, .img5 {
+      position: relative;
+      opacity: 0.70;
+      background-size: calc(100vh*1.5);
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-position: center;
+      //fixed = parallax, scroll = normal
+    
+    }
+  }
+
+  @media screen and (orientation : landscape){
+    .img1, .img2, .img3, .img4, .img5 {
+      position: relative;
+      opacity: 0.70;
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-position: center;
+      //fixed = parallax, scroll = normal
+    }
+
+    .text {
+    position:absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 27px;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+  }
+
+  .border{
+    background-color: #111;
+    color: #fff;
+    width: 100%;
+    padding: 20 0 20 0;
+  }
+
+  .border.trans {
+    background-color: transparent;
+  }
+
+  .wrapMe {
+    line-height:2em;
+
+  }
+
+
+        // .img1 {
+        //   background-image:url('./assets/rocket.jpg');
+        //   min-height: 100vh;
+        // }
+      
+        // .img2 {
+        //   background-image:url('./assets/spaceDogfight.png');
+        //   min-height: 50vh;
+        // }
+      
+        // .img3 {
+        //   background-image:url('./assets/PizzaBox.jpeg');
+        //   min-height: 50vh;
+        // }
+      
+        // .img4 {
+        //   background-image:url('./assets/tournamaker.png');
+        //   min-height: 50vh;
+        // }
+      
+      
+        // .img5 {
+        //   background-image:url('./assets/sky.jpeg');
+        //   min-height: 50%;
+        // }
+    
+  }
+
+  @media (min-width:700px){
 
 .img1, .img2, .img3, .img4, .img5 {
   position: relative;
   opacity: 0.70;
-  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   background-attachment: fixed;
   //fixed = parallax, scroll = normal
   
 
+  }
 }
-
   .img1 {
     background-image:url('./assets/rocket.jpg');
-    min-height: 100vh;
+    min-height: 100%;
   }
+
+  
 
   .img2 {
     background-image:url('./assets/spaceDogfight.png');
-    min-height: 50vh;
+    min-height: 50%;
   }
 
   .img3 {
     background-image:url('./assets/PizzaBox.jpeg');
-    min-height: 50vh;
+    min-height: 50%;
   }
 
   .img4 {
     background-image:url('./assets/tournamaker.png');
-    min-height: 50vh;
+    min-height: 50%;
   }
 
 
   .img5 {
     background-image:url('./assets/sky.jpeg');
-    min-height: 50vh;
+    min-height: 50%;
   }
+
+
   .section {
     text-align:center;
     padding: 50px 80px;
